@@ -47,7 +47,7 @@ public class ResourceLocatorHandler implements ServerRestHandler {
                 //TODO: we should make sure ArC always picks up these classes and makes them beans
                 //but until we get a bug report about it lets not worry for now, as I don't think anyone
                 //really uses this
-                locator = locatorClass.newInstance();
+                locator = locatorClass.getDeclaredConstructor().newInstance();
             }
         } else {
             locatorClass = locator.getClass();
